Fixed widget spacing.

--- a/style.css
+++ b/style.css
@@ -590,9 +590,9 @@ section[role="banner"] {
 
 /* Sidebar */
 .widget-area .widget {
-	-webkit-hyphens: auto;
-	-moz-hyphens: auto;
-	hyphens: auto;
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	hyphens: none;
 	margin-bottom: 48px;
 	word-wrap: break-word;
 }
@@ -1748,6 +1748,7 @@ img#wpstats {
 
 .listen_now {
 	margin-left: 12px;
+	margin-top: 8px;
 	padding-left: 5px;
 	font-family: 'Arvo', serif;
 	font-size: 13pt;
@@ -1777,7 +1778,7 @@ img#wpstats {
 	padding-left: 5px;
 	padding-right: 5px;
 	padding-top: 12px;
-	padding-bottom: 5px;
+	padding-bottom: 24px;
 	margin-left: 12px;
 	line-height: 12pt;
 	clear: both;
